prevent too large image on wide viewports

--- a/teknologkoren_se/static/css/style.css
+++ b/teknologkoren_se/static/css/style.css
@@ -226,6 +226,16 @@ article header {
     height: 15em;
 }
 
+@media screen and (min-width: 85em) {
+    .cover-image {
+        width: 83em;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 10px;
+    }
+}
+
 @media screen and (max-width: 38em) {
     body {
         margin-bottom: 25px;
